<resources>
    <string-array name="string_array_payment_type">
        <item>CASH</item>
        <item>RTGS</item>
        <item>CHEQUE</item>
    </string-array>
    <string-array name="string_array_kg_price">
        <item>100</item>
        <item>40</item>
    </string-array>
    <string-array name="string_array_labour_cost">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string-array name="string_array_dami_amount">
        <item>00</item>
        <item>2.5</item>
        <item>04</item>
    </string-array>
    <string-array name="string_array_users">
        <item>Select Any User…</item>
        <item>Supplier</item>
        <item>Customer</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="products">Products</string>
    <string name="balance_sheet">Balance Sheet</string>
    <string name="customers">Customers</string>
    <string name="new_customer">New Customer</string>
    <string name="please_try_again">Please Try Again</string>
    <string name="product_name">Product Name *</string>
    <string name="unit_name">Unit Name*</string>
    <string name="unit_value">Unit Value*</string>
    <string name="please_enter_unit_name">Please Enter Unit Name</string>
    <string name="unit_value_must_be_greater_than_zero">UnitValue Must Be Greater Than Or Equals To Zero</string>
    <string name="add_new_unit">Add New Unit</string>
    <string name="update_unit">"Update Unit ( %s )"</string>
    <string name="please_enter_product_name">Please Enter Product Name</string>
    <string name="add_new_product">Add New Product</string>
    <string name="update_product_string">"Update Product ( %s )"</string>
    <string name="unsuccesfully_logout">Failed To Logout User</string>
    <string name="successfully_logout">SuccessFully Logout</string>
    <string name="string_add_new_customer_title">Add New Customer</string>
    <string name="string_payment_history_title">Payment History ( %s )</string>
    <string name="string_enter_payment_amount">Enter Payment Amt</string>
    <string name="string_interest_amt">Interest Amt</string>
    <string name="string_is_interest_also_paid">Interest Paid ?</string>
    <string name="app_name">DigitalMandi</string>
    <string name="string_dm">DM</string>
    <string name="string_login">LOGIN</string>
    <string name="string_registered_email_address">Registered Email Address</string>
    <string name="string_password">Password</string>
    <string name="string_forgot_password">Forgot Password ?</string>
    <string name="string_register">Register</string>
    <string name="string_name_star">Name*</string>
    <string name="string_password_star">Password*</string>
    <string name="string_confirm_password_star">Confirm Password*</string>
    <string name="string_email_address_star">Email Address*</string>
    <string name="string_phone_number_star">Phone Number*</string>
    <string name="string_firm_name_star">Firm Name*</string>
    <string name="string_tin_number_star">Tin Number*</string>
    <string name="string_landmark_star">LandMark</string>
    <string name="string_address_star">Address</string>
    <string name="string_please_select_appropriate_customer_type">Please Select Appropriate Customer Type From Drop Down</string>
    <string name="string_please_select_any_supplier_from_drop_down">Please Select Any Supplier From Drop Down</string>
    <string name="string_please_select_any_supplier">Please Select Any Supplier…</string>
    <string name="string_already_have_an_account_login">Already Have An Account ? Login</string>
    <string name="sync_in_progress_please_wait">Syncing in progress\nPlease Wait…</string>
    <string name="string_syncing">Syncing</string>
    <string name="string_no_unit_found_please_add_new_unit">No Unit Available\nPlease Add Unit</string>
    <string name="string_continue_to_delete_unit">Continue, To Delete Unit !!!</string>
    <string name="string_sorry_you_cant_delete_this_unit">Sorry You can\'t delete this unit</string>
    <string name="string_no_product_found_please_add_new_product">No Product Available\nPlease Add Product</string>
    <string name="string_continue_to_delete_product">Continue, To Delete Product !!!</string>
    <string name="string_sorry_you_cant_delete_this_product">Sorry You can\'t delete this product</string>
    <string name="string_no_customer_found_please_add_new_customer">No Customer Available\nPlease Add Customer</string>
    <string name="string_customer_orders">\'s Orders</string>
    <string name="string_no_customer_orders_found_please_add_new_order">No Order Available\nPlease Add Order</string>
    <string name="string_order_details">Order Details</string>
    <string name="string_bill_print">Bill Print</string>
    <string name="string_sub_total">Sub Total</string>
    <string name="string_expenses">Expenses</string>
    <string name="string_labour_cost">Labour Cost</string>
    <string name="string_bardana_cost">Bardana Cost</string>
    <string name="string_total">Total</string>
    <string name="string_vehicle_cost">Vehicle Cost</string>
    <string name="string_no_orders_found">No Orders Found</string>
    <string name="string_new_order">New Order</string>
    <string name="string_please_select_start_date">Please Select Start Date</string>
    <string name="string_please_select_end_date">Please Select End Date</string>
    <string name="string_start_date_must_less_than_end_date">Start Date Must Be Greater Or Equals To End Date</string>
    <string name="string_please_enable_auto_date_time_from_setting">Please Enable Auto Date From Device</string>
    <string name="string_reset_applied_filters">Continue, To Reset Applied Filters !!!</string>
    <string name="string_failed_to_get_pdf_from_server">Failed To Get PDF From Server</string>
    <string name="string_order_deleted_successfully">Order Deleted Successfully</string>
    <string name="string_order_deleted_unsuccessfully">Sorry You Can\'t Delete This Order</string>
    <string name="string_continue_to_delete_order">Continue, To Delete Order !!!</string>
    <string name="string_order_id_details">Order (%s) Details</string>
    <string name="string_no_customer_order_details_found_please_try_again_later">No Order Details Available</string>
    <string name="string_no_customer_payment_found_please_pay_due_amount">No Payment Available\nPlease Pay</string>
    <string name="string_new_payment">New Payment</string>
    <string name="string_order_amount">Order Amount</string>
    <string name="string_paid_amount">Paid Amount</string>
    <string name="string_due_amount">Due Amount</string>
    <string name="string_interest_amount">Interest Amount</string>
    <string name="string_interest_paid_amount">Interest Paid Amount</string>
    <string name="string_interest_due_amount">Interest Due Amount</string>
    <string name="string_total_paid_amount">Total Paid Amount</string>
    <string name="string_interest_paid">Interest Paid ?</string>
    <string name="string_interest_text">\@%s%% Interest</string>
    <string name="string_payment_date">Payment Date</string>
    <string name="string_payment_type">Payment Type:</string>
    <string name="string_interest_rate">Interest Rate</string>
    <string name="string_payment">Payment</string>
    <string name="string_please_enter_payment_amount">Please Enter Payment Amount</string>
    <string name="string_interest_rate_can_not_be_empty">Rate Of Interest Can\'t Be Empty</string>
    <string name="string_interest_amount_can_not_be_empty">Interest Amt Can\'t Be Empty</string>
    <string name="string_no_interest_days">No Interest Days</string>
    <string name="string_interest_day_is">Interest Day is </string>
    <string name="string_interest_days_are">Interest Days are </string>
    <string name="string_invalid_payment_date">Invalid Payment Date</string>
    <string name="string_payment_done_successfully">Payment Done SuccessFully</string>
    <string name="string_continue_for_payment">Continue To Pay Rs %s</string>
    <string name="string_name">Name</string>
    <string name="string_unit">Unit</string>
    <string name="string_qty">Qty</string>
    <string name="string_price">Price</string>
    <string name="string_total_amount">Total Amount</string>
    <string name="string_no_purchase_added_yet_please_add_new_purchase">No Purchase Added\nPlease Add Purchased Items</string>
    <string name="string_sold_order_details">Sold Details</string>
    <string name="string_payment_details">Payment Details</string>
    <string name="string_add_purchased_product">Add Purchased Product</string>
    <string name="string_set">SET</string>
    <string name="string_sold_details_of_items">Sold Details Of %s\'s Item</string>
    <string name="string_stock_items">Stock Items</string>
    <string name="string_cart_items">Cart Items</string>
    <string name="string_details">Details</string>
    <string name="string_order_date">Order Date</string>
    <string name="string_quintal_cost">Quintal Cost</string>
    <string name="string_driver_name">Driver Name</string>
    <string name="string_driver_phone_no">Driver Phone No</string>
    <string name="string_vehicle_no">Vehicle No</string>
    <string name="string_total_load_q">Total Load (Q)</string>
    <string name="string_total_nag">Total Nag</string>
    <string name="string_place_order">Place Order</string>
    <string name="string_max_qty">Max Qty KG (%s) </string>
    <string name="string_max_purchase">Purchase Qty KG (%s) </string>
    <string name="string_please_enter_product_price">Please Enter Product Price</string>
    <string name="string_you_dont_have_enough_stock">You Don\'t Have Enough Stock Please Reduce Qty Or Unit Value</string>
    <string name="string_kg_per_quantity">Kg Per Quantity</string>
    <string name="string_quantity">Quantity</string>
    <string name="string_product_price">Product Price</string>
    <string name="string_rs_in_kg">Rs In Kg</string>
    <string name="string_save">SAVE</string>
    <string name="string_please_add_item_into_cart">Please Add Item Into Cart</string>
    <string name="string_no_purchased_item_found_please_add_item_first">No Purchased Available\nPlease Purchase First</string>
    <string name="string_add_items">Add Items</string>
    <string name="string_please_select_order_date_first">Please Select Order Date First</string>
    <string name="string_please_enter_valid_rent">Please Enter Valid Vehicle Rent</string>
    <string name="please_provide_vechile_number">Please Provide Vehicle Number</string>
    <string name="string_continue_to_place_order">Continue, To Place Order !!!</string>
    <string name="string_kg">%s(KG)</string>
    <string name="string_driver_mobile">(M)</string>
    <string name="string_qunital">%s(Q)</string>
    <string name="string_search">Search</string>
    <string name="string_sort_alphabetically">Sort Alphabetically</string>
    <string name="string_add">Add</string>
    <string name="string_start_date">Start Date</string>
    <string name="string_end_date">End Date</string>
    <string name="string_reset_filter">Reset Filter</string>
    <string name="string_submit">Submit</string>
</resources>