<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<group android:checkableBehavior="single">
    -->
    <item
        android:id="@+id/supplier_nav_menu_customer"
        android:checked="true"
        android:icon="@drawable/ic_customer"
        android:title="@string/customers" />
    <item
        android:id="@+id/supplier_nav_menu_balance_sheet"
        android:checked="true"
        android:icon="@drawable/ic_balance_sheet"
        android:title="@string/balance_sheet" />
    <item
        android:id="@+id/supplier_nav_menu_product"
        android:checked="true"
        android:icon="@drawable/ic_product"
        android:title="@string/products" />

    <item
        android:id="@+id/supplier_nav_menu_unit"
        android:checked="true"
        android:icon="@drawable/ic_unit"
        android:title="Units" />

    <item
        android:id="@+id/supplier_nav_menu_purchase"
        android:checked="true"
        android:icon="@drawable/ic_purchase"
        android:title="Purchase" />

    <item
        android:id="@+id/supplier_nav_menu_settings"
        android:checked="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/settings" />
    <item
        android:id="@+id/supplier_nav_menu_logout"
        android:checked="true"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
    <!--</group>-->

</menu>
