<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/layout_fragment_seller_orders_btn_start_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/selector_blue_button"
            android:gravity="center"
            android:text="@string/string_start_date"
            android:textColor="@drawable/selector_blue_button_text"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/layout_fragment_seller_orders_btn_end_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/selector_blue_button"
            android:gravity="center"
            android:text="@string/string_end_date"
            android:textColor="@drawable/selector_blue_button_text"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/layout_fragment_seller_orders_btn_reset_date"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/selector_blue_button"
            android:gravity="center"
            android:text="@string/string_reset_filter"
            android:textColor="@drawable/selector_blue_button_text"
            android:textSize="14sp" />

    </LinearLayout>

    <include layout="@layout/layout_common_list" />
</LinearLayout>