<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <include layout="@layout/layout_common_top_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="@drawable/xml_corner_stroke_blue_solid_white_bg" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/xml_corner_stroke_blue_solid_white_bg" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/xml_corner_sign_up_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/leftLine"
                    android:layout_width="5dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="20dp"
                    android:background="@android:color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/leftLine"
                    android:layout_alignTop="@+id/leftLine"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/leftLine"
                    android:text="@string/new_customer"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/layout_activity_sign_up_btn_user_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="05dp"
                    android:src="@drawable/ic_user_unselected"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/leftLine"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_name_star"
                                android:inputType="textPersonName"
                                android:textSize="22sp" />

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_phone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_phone_number_star"
                                android:inputType="phone"
                                android:maxLength="10"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_email_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_email_address_star"
                                android:inputType="textEmailAddress"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_password_star"
                                android:inputType="textPassword"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_confirm_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_confirm_password_star"
                                android:inputType="textPassword"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_firm_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_firm_name_star"
                                android:inputType="text"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_tin_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_tin_number_star"
                                android:inputType="number"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>


                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_land_mark"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_landmark_star"
                                android:inputType="text"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:theme="@style/TextAppearance.App.TextInputLayout.SignUp">

                            <android.support.v7.widget.AppCompatEditText
                                android:id="@+id/layout_activity_sign_up_edt_address"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/string_address_star"
                                android:inputType="text"
                                android:textSize="22sp" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/layout_activity_sign_up_btn_submit"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/xml_white_view_selector"
                            android:text="@string/string_submit"
                            android:textColor="@drawable/xml_white_view_text_selector"
                            android:textSize="20sp" />

                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>

        </FrameLayout>

    </RelativeLayout>

</LinearLayout>