<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/layout_tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/layout_tv_max_qty_in_kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/layout_tv_purchased_qty_in_kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string_kg_per_quantity"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/layout_spinner_unit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorWhite" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/string_quantity"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/layout_btn_decrease_qty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_decrease" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/layout_tv_qty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/colorWhite"
            android:textSize="40sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/layout_btn_increase_qty"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_increase" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/TextAppearance.App.TextInputLayout.SignUp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/layout_edt_product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/string_product_price"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/string_rs_in_kg"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/layout_spinner_kg_price"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorWhite" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/layout_btn_save"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:background="@drawable/xml_white_view_selector"
        android:gravity="center"
        android:padding="05sp"
        android:text="@string/string_save"
        android:textColor="@drawable/xml_white_view_text_selector"
        android:textSize="22sp" />

</LinearLayout>
